backend-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expensy-backend
  namespace: expensy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expensy-backend
  template:
    metadata:
      labels:
        app: expensy-backend
    spec:
      containers:
        - name: expensy-backend
          image: romainconfavreux/expensy_backend:latest
          ports:
            - containerPort: 8706
---
apiVersion: v1
kind: Service
metadata:
  name: expensy-backend
  namespace: expensy
spec:
  selector:
    app: expensy-backend
  ports:
    - port: 80       # cluster service port
      targetPort: 8706
  type: ClusterIP    # internal-only, frontend + ingress will use this
