ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expensy-ingress
  namespace: expensy
  annotations:
    kubernetes.io/ingress.class: nginx
    #cert-manager.io/cluster-issuer: letsencrypt-prod   # optional, if using TLS
spec:
  rules:
    - host: expensy.raj.diogohack.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expensy-frontend
                port:
                  number: 80
    - host: api.expensy.raj.diogohack.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expensy-backend
                port:
                  number: 80
  # Optional TLS if using cert-manager + Let's Encrypt
  #tls:
  #  - hosts:
  #      - expensy.diogohack.shop
  #    secretName: expensy-tls
